client-mobile: fixed text overflow in accordion list item

--- a/system/roles/client-mobile/files/static/gislab-mobile/www/styles/gislab/list.css
+++ b/system/roles/client-mobile/files/static/gislab-mobile/www/styles/gislab/list.css
@@ -153,6 +153,10 @@ input[type="checkbox"]:indeterminate + .checkbox-icon .indeterminate {
 	background-color: #d9d9d9;
 }
 
+.list__item--accordion {
+	padding-right: 26px;
+}
+
 .list__item--accordion-content {
 	display: block!important;
 	overflow: hidden;
